# Compiler

./: CMakeLists.txt  main.cpp
Lexer/: Lexer.cpp  Lexer.h
Lexer/Inc/: Lexer.h
Lexer/Src/: Lexer.cpp
Parser/Inc/: Parser.h
Parser/Src/: Parser.cpp
Token/: token.h
